# SAGE

./: ARCHITECTURE.md  CMakeLists.txt  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  build_output.txt
build_new/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SAGE.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_new/src/ade/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  sage_ade.vcxproj  sage_ade.vcxproj.filters
build_new/src/ade/sage_ade.dir/Release/sage_ade.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  sage_ade.lastbuildstate
build_new/src/cal/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  sage_cal.vcxproj  sage_cal.vcxproj.filters
build_new/src/cal/sage_cal.dir/Release/sage_cal.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  sage_cal.lastbuildstate
build_new/src/core/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_new/src/hpcm/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_new/src/infra/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_new/src/poe/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  sage_poe.vcxproj  sage_poe.vcxproj.filters
build_new/src/poe/sage_poe.dir/Release/sage_poe.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  sage_poe.lastbuildstate
build_new/src/rme/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  sage_rme.vcxproj  sage_rme.vcxproj.filters
build_new/src/rme/sage_rme.dir/Release/sage_rme.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  sage_rme.lastbuildstate
build_new/src/types/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
build_new/tests/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  benchmark_latency.vcxproj  cmake_install.cmake  test_audit_durability.vcxproj  test_audit_durability.vcxproj.filters  test_core.vcxproj  test_core.vcxproj.filters
build_new/tests/benchmark_latency.dir/Release/benchmar.4C605809.tlog/: CustomBuild.read.1.tlog  benchmark_latency.lastbuildstate
build_new/tests/test_core.dir/Release/test_core.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build_new/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_new/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
cmake/: CompilerFlags.cmake  Dependencies.cmake
config/: sage.toml
scripts/: build.sh  run_all.sh  tune_system.sh
src/ade/: CMakeLists.txt  adaptive_window.hpp  ade_main.cpp  ewma_stats.hpp  feature_signal.hpp  latency_tracker.hpp  normalizer.hpp  rolling_stats.hpp  tick_buffer.hpp  winsorization.hpp
src/cal/: CMakeLists.txt  cal_main.cpp  json_parser.hpp  validator.hpp  websocket_client.hpp
src/core/: CMakeLists.txt  compiler.hpp  constants.hpp  cpu_affinity.hpp  memory.hpp  shutdown.hpp  timing.hpp
src/hpcm/: CMakeLists.txt  lookup_tables.hpp  simd_ops.hpp  statistics.hpp
src/infra/: CMakeLists.txt  ring_buffer.hpp
src/poe/: CMakeLists.txt  audit_log.hpp  fix_encoder.hpp  order_id_gen.hpp  poe_main.cpp
src/rme/: CMakeLists.txt  circuit_breaker.hpp  position_tracker.hpp  risk_limits.hpp  rme_main.cpp
src/types/: CMakeLists.txt  fixed_point.hpp  sage_message.hpp
tests/: CMakeLists.txt  audit_durability_test.cpp  test_core.cpp
